# SOCR_Application

./: package-lock.json
socrr/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
socrr/.github/: README.md
socrr/.github/workflows/: README.md  ci.yml
socrr/apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
socrr/apps/backend/alembic/: README.md  env.py  script.py.mako
socrr/apps/backend/app/: README.md  __init__.py  main.py
socrr/apps/backend/app/agents/: README.md  __init__.py
socrr/apps/backend/app/analytics/: README.md  __init__.py
socrr/apps/backend/app/api/: README.md  __init__.py  router.py
socrr/apps/backend/app/api/v1/: health.py
socrr/apps/backend/app/auth/: README.md  __init__.py
socrr/apps/backend/app/compliance/: README.md  __init__.py
socrr/apps/backend/app/configs/: README.md  __init__.py
socrr/apps/backend/app/core/config/: settings.py
socrr/apps/backend/app/core/database/: session.py
socrr/apps/backend/app/database/: README.md  __init__.py
socrr/apps/backend/app/logger/: README.md  __init__.py
socrr/apps/backend/app/middleware/: README.md  __init__.py
socrr/apps/backend/app/models/: README.md  __init__.py
socrr/apps/backend/app/notifications/: README.md  __init__.py
socrr/apps/backend/app/prompts/: README.md  __init__.py
socrr/apps/backend/app/rag/: README.md  __init__.py
socrr/apps/backend/app/reports/: README.md  __init__.py
socrr/apps/backend/app/repositories/: README.md  __init__.py
socrr/apps/backend/app/risk/: README.md  __init__.py
socrr/apps/backend/app/schemas/: README.md  __init__.py
socrr/apps/backend/app/services/: README.md  __init__.py
socrr/apps/backend/app/storage/: README.md  __init__.py
socrr/apps/backend/app/utils/: README.md  __init__.py
socrr/apps/backend/app/workers/: README.md  __init__.py
socrr/apps/backend/requirements/: README.md  base.txt  dev.txt  prod.txt
socrr/apps/backend/tests/: README.md  __init__.py
socrr/apps/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  (+1 more)
socrr/datasets/: README.md
socrr/storage/: README.md
socrr/vector_db/: README.md
(+32 files in other folders)
