[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socrr-backend"
version = "0.1.0"
description = "TODO: SOCRR backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "app"}

[tool.pytest.ini_options]
addopts = "-ra"
